# fleetpy-trajectory

./: .gitignore  create_fleet_trajectory.ipynb  create_pt_trajectory.ipynb  pyproject.toml
data/sum-wp2_2-deliverable/networks/example_network/: study_area_with_pt.tif
data/sum-wp2_2-deliverable/pt/example_network/: example_pt_route.geojson  example_pt_route.qmd
data/sum-wp2_3-deliverable/networks/example_network/: study_area_with_pt_2.tif  study_area_with_pt_3.tif  study_area_with_pt_4.tif
data/sum-wp2_3-deliverable/pt/example_network/example_gtfs/matched/: stop_times_fp.txt
data/sum-wp2_3-deliverable/simulation-results/example_ptbroker/: 00_config.json  1_user-stats.csv  2-0_op-stats.csv  3-0_op-dyn_atts.csv  final_state.csv  standard_eval.csv  standard_mod-0.0_veh_eval.csv
src/: NetworkRouter.py  OpStatsLoader.py  PTTrajBuilder.py  TrajDrawer.py  VehTrajBuilder.py
