[project]
name = "fleetpy-trajectory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ffmpeg>=1.4",
    "geopandas>=1.0.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "networkx>=3.4.2",
    "notebook>=7.4.2",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pyproj>=3.7.1",
    "pyproject-toml>=0.1.0",
    "rasterio>=1.4.3",
    "shapely>=2.1.1",
]
